Добавлена аннотация @ExtendWith