@@ -1,10 +1,14 @@
 package managers;
 
 import pages.*;
+import java.lang.reflect.InvocationTargetException;
+import java.util.HashMap;
+import java.util.Map;
 
 public class PageManager {
 
     private static PageManager pageManager = null;
+    private Map<String, Object> mapPage = new HashMap<>();
 
     private PageManager() {
     }
@@ -17,13 +21,25 @@ public class PageManager {
     }
 
     public <T extends BasePage> T getPage(Class<T> page) {
-        try {
-            return (T) page.newInstance();
-        } catch (InstantiationException e) {
-            e.printStackTrace();
-        } catch (IllegalAccessException e) {
-            e.printStackTrace();
-        } return null;
+        if(mapPage.isEmpty() || mapPage.get(page.getName()) == null) {
+
+            try {
+                mapPage.put(page.getName(), page.getConstructor().newInstance());
+            } catch (InstantiationException e) {
+                e.printStackTrace();
+            } catch (IllegalAccessException e) {
+                e.printStackTrace();
+            } catch (InvocationTargetException e) {
+                e.printStackTrace();
+            } catch (NoSuchMethodException e) {
+                e.printStackTrace();
+            }
+        }
+        return (T)  mapPage.get(page.getName());
+    }
+
+    public void clearMap() {
+        mapPage.clear();
     }
 
 }
